# MIDIPresetController

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stm32.cmake
.devcontainer/: devcontainer.json
HW/: README.md
HW/KicadProject/: #auto_saved_files#  Input.kicad_sch  MIDI.kicad_sch  MIDIPresetController.kicad_pcb  MIDIPresetController.kicad_prl  MIDIPresetController.kicad_pro  MIDIPresetController.kicad_sch  Microcontroller.kicad_sch  Power.kicad_sch  _autosave-MIDI.kicad_sch  _autosave-Microcontroller.kicad_sch  fp-info-cache  fp-lib-table
HW/res/3d/: CR3Holder002.step
HW/res/3d/1455J1602/: J Extrusion 160mm.igs  J Extrusion 160mm.stp
SW/: stm32.cmake
SW/RTT/SEGGER_RTT_V786g/RTT/: SEGGER_RTT.c
SW/RTT/SEGGER_RTT_V786g/Syscalls/: SEGGER_RTT_Syscalls_KEIL.c
SW/inc/: isr.hpp  led.hpp  main.hpp  midi.hpp  rcc.hpp  tim.hpp
SW/src/: STM32L011D4PX_FLASH.ld  isr.c  main.cpp  midi.cpp  rcc.cpp  tim.cpp
inc/: main.hpp
src/: main.c  main.cpp
